Add toggle button

--- a/style.css
+++ b/style.css
@@ -173,23 +173,23 @@ p {
 }
 
 /* Contact Section */
-.fab {
+.fa-brands {
   font-size: 100px;
   margin-right: 50px;
   cursor: pointer;
   color: var(--primary-color);
 }
 
-.fab:hover {
+.fa-brands:hover {
   color: var(--on-background);
 }
 
 /* Dark Mode Toggle */
 .theme-switch-wrapper {
+  position: fixed;
   display: flex;
   align-items: center;
   z-index: 100;
-  position: fixed;
   right: 25px;
   top: 30px;
 }
@@ -255,7 +255,7 @@ input:checked + .slider::before {
   border-radius: 50%;
 }
 
-.fas {
+.fa-solid {
   font-size: 30px;
   margin-right: 5px;
 }
